Fix media query breakpoints to avoid overlap between devices ranges.

--- a/style.css/style.css
+++ b/style.css/style.css
@@ -16,10 +16,10 @@
     position: fixed;
 }
 
-/* .image-size{
-    height: 50%;
-    width: 50%;   
-} */
+#gif{
+  
+  right: 5500px;
+}
 
 .parent {
   position: relative;
@@ -66,10 +66,25 @@ h2{
 
 }
 
-/* .footer_photo{
-    width: 50%;
-    height: 1000px;
-    bottom: 1%;
-    position : absolute;
-   
-} */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 599px) {
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and  (max-width: 767px) {
+
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) and ((max-width: 1199px)) {
+
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  
+}
